att novas nomes

--- a/index.html
+++ b/index.html
@@ -29,9 +29,13 @@
       </div>
 
       <ul>
-        <li><a href="#">Inscreva-se no NLW</a></li>
+        <li>
+          <a href="https://gaimportsco.com.br/">Visite minha Loja Virtual</a>
+        </li>
 
-        <li><a href="#">Baixe meu e-book</a></li>
+        <li>
+          <a href="https://github.com/arthurluizvieira">Siga meu perfil</a>
+        </li>
 
         <li>
           <a href="https://github.com/arthurluizvieira" target="_blank"
